# sistema-ventas-paraguay

./: .gitignore  Dockerfile  LICENSE  alembic.ini  create_admin.py  docker-compose.yml  main.py  package.json  pyproject.toml  replit.md  upload_all_files.js  upload_to_github.js
alembic/: env.py
alembic/versions/: 128177144df2_add_tourism_regime_fields_for_paraguay_.py  25372ebad3db_add_user_roles_and_limitations_system.py  4e9f6f26e197_add_currency_field_to_invoices.py  6b40ae208cc4_fix_paraguay_fiscal_fields_and_company_.py  891f08c40066_add_company_settings_table.py  ba585b231cdd_add_can_create_customers_permission.py  c72dfa0b3d92_initial_migration_with_sales_management_.py  c87db5e40a35_add_can_create_quotes_permission_to_.py  eaf3cd424b38_add_deposit_system_tables.py
app/api/: auth.py  company.py  customers.py  dashboard.py  deposits.py  invoices.py  notifications.py  products.py  quotes.py  sales_orders.py  users.py
app/core/: auth.py  celery_app.py  config.py  database.py  dependencies.py
app/crud/: company.py  customer.py  deposit.py  invoice.py  product.py  quote.py  sales_order.py  usage_limits.py  user.py
app/models/: __init__.py  company.py  customer.py  deposit.py  invoice.py  product.py  sales.py  user.py
app/schemas/: auth.py  company.py  customer.py  deposit.py  invoice.py  product.py  quote.py  sales_order.py
app/services/: notification_service.py  pdf_generator.py
app/utils/: paraguay_fiscal.py
frontend/: .env  Dockerfile  package.json  vite.config.ts
frontend/src/: App.tsx
static/: app.js  dashboard.html  dashboard.js  index.html
(+13 files in other folders)
