[project]
name = "sales-management-system"
version = "0.1.0"
description = "Sistema completo de gestión de ventas con CRM, cotizaciones, facturación e inventario"
authors = ["Sales Management Team <team@sales.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.23.2",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.7",
    "pydantic>=2.4.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.4",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "fastapi-mail>=1.4.1",
    "pydantic-settings>=2.0.3",
]
